add custom view of snivel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,13 @@ android {
 
     defaultConfig {
         applicationId "com.katdmy.android.balloon_game_client"
-        minSdkVersion 29
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -42,4 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Vector
+    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
 }
