--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Balloongameclient">
+        android:theme="@style/SplashScreenTheme">
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape">
